<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/gray"
    tools:context=".presentation.auth.SignUpFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/places"
        android:layout_gravity="center"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="cursive"/>

    <EditText
        android:hotelId="@+hotelId/editTextSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no" />

    <EditText
        android:hotelId="@+hotelId/editTextSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/password"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no" />

    <EditText
        android:hotelId="@+hotelId/editTextSignupRepPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/black"
        android:hint="@string/re_password"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no" />

    <Button
        android:hotelId="@+hotelId/buttonSignup"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_cyan"
        android:textSize="20sp"
        android:text="@string/signup"/>

    <TextView
        android:hotelId="@+hotelId/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_underline"
        android:layout_marginStart="20dp"
        android:textColor="@color/blue"/>


</LinearLayout>