<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".presentation.home.HomeFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/places"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="cursive"
        android:text="@string/find_your_hotel"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from" />

        <ImageButton
            android:id="@+id/imageButtonDateFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/date_picker_icon" />

        <TextView
            android:id="@+id/textViewCheckInDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2023-10-11" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/to" />


        <ImageButton
            android:id="@+id/imageButtonDateTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:background="@drawable/date_picker_icon"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/textViewCheckOutDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2023-10-11" />


    </LinearLayout>

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/ex_minsk"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="4dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/buttonFindLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/light_cyan"
        android:text="@string/go"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPopularLocations"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>